apple.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: apple-app
  labels:
    app: apple-app
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      args:
        - "-text=apple"
---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
