banana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: banana-app
  labels:
    name: banana-app
spec:
  containers:
  - name: banana-app
    image: hashicorp/http-echo
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    args:
        - "-text=banana"

---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
