ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  labels:
    name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
        - path: /apple
          backend:
            service:
              name: apple-service
              port: 
                number: 5678
        - path: /banana
          backend:
            service:
              name: banana-service
              port:
                number: 5678
